--- a/nodejs/src/widgets/common/HyperGlobe.scss
+++ b/nodejs/src/widgets/common/HyperGlobe.scss
@@ -1,11 +1,11 @@
 .hyperglobe {
   position: absolute;
-  width: 600px;
-  height: 600px;
+  /*width: 300px;
+  height: 300px;*/
   animation: fadeInUp 10s 3s ease-in-out forwards;
-  margin: -300px;
+  /*margin: -150px;*/
   top: 50%;
-  left: 50%;
+  left: 75%;
   animation: rotate 60s linear infinite;
   opacity: 1;
 }
