[Refactor] CSS 수정 - 제목 및 좌우 공간 배치 수정

--- a/nodejs/src/index.scss
+++ b/nodejs/src/index.scss
@@ -7,9 +7,25 @@ body {
   background: #1e2430;
 }
 
-@font-face {
+/*@font-face {
   font-family: "BMEULJIRO";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/BMEULJIRO.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}*/
+
+@font-face {
+  font-family: "GmarketSansMedium";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SDSamliphopangche_Outline";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/SDSamliphopangche_Outline.woff")
     format("woff");
   font-weight: normal;
   font-style: normal;
