--- a/nodejs/src/widgets/common/HyperGlobe.scss
+++ b/nodejs/src/widgets/common/HyperGlobe.scss
@@ -5,7 +5,7 @@
   animation: fadeInUp 10s 3s ease-in-out forwards;
   /*margin: -150px;*/
   top: 50%;
-  left: 75%;
+  left: 77%;
   animation: rotate 60s linear infinite;
   opacity: 1;
 }
@@ -15,7 +15,7 @@
   border-radius: 50%;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
-  border: 1px solid #fff;
+  /*border: 1px solid #fff;*/
   position: absolute;
   top: 50%;
   left: 91.35%;
