--- a/nodejs/src/widgets/common/HyperGlobe.scss
+++ b/nodejs/src/widgets/common/HyperGlobe.scss
@@ -1,8 +1,12 @@
+.start {
+  width: 30vw;
+}
+
 .hyperglobe {
   position: absolute;
   /*width: 300px;
   height: 300px;*/
-  animation: fadeInUp 10s 3s ease-in-out forwards;
+  animation: fadeInUp 1s 1.5s ease-in-out forwards;
   /*margin: -150px;*/
   top: 50%;
   left: 77%;
@@ -392,6 +396,6 @@
 
 @keyframes rotate {
   100% {
-    transform: rotate(0deg);
+    transform: rotate(360deg);
   }
 }
