[New Feature] sticky layout for Eye icon

--- a/nodejs/src/widgets/common/Eye.scss
+++ b/nodejs/src/widgets/common/Eye.scss
@@ -6,7 +6,7 @@
   margin-left: -3em;
 }
 .eye-wrap {
-  position: absolute;
+  position: sticky;
   width: 8.4em;
   height: 8.4em;
   border: 0.8em solid black;
