--- a/react/src/index.scss
+++ b/react/src/index.scss
@@ -47,10 +47,12 @@ body {
   background-clip: padding-box;
   border: 0.5rem solid transparent;
   background-color: transparent;
-  color: rgba(255, 255, 255, 0.3);
+  //color: rgba(255, 255, 255, 0.3);
   margin: 0;
 }
-
+body::-webkit-scrollbar-thumb {
+  color: rgba(255, 255, 255, 0.3);
+}
 *::-webkit-scrollbar-thumb {
   box-shadow: inset 0 0 0 10px;
 }
